# asteroids-rust-test

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
assets/: dynamic_asset.assets.ron  game.assets.ron
src/: asteroid.rs  destruction.rs  game_over.rs  health_pickup.rs  lib.rs  main.rs  player.rs  playing.rs  projectile.rs  score.rs  states.rs  stats.rs  title.rs  viewport_bound.rs
src/asteroid/: asteroid_spawner.rs
src/states/: game_over.rs  playing.rs  title.rs
