[package]
name = "asteroids-rust-test"
version = "0.1.0"
edition = "2021"

[lib]
name = "game_library"
path = "src/lib.rs"

[[bin]]
name = "game_binary"
path = "src/main.rs"

[dependencies]
avian2d = "0.1"
bevy = "0.14"
bevy-inspector-egui = { version = "0.25.2", optional = true }
bevy_asset_loader = { version = "0.21", features = ["standard_dynamic_assets",] }
bevy_transform_interpolation = { git = "https://github.com/Jondolf/bevy_transform_interpolation", version = "0.1.0" }
leafwing-input-manager = "0.15"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.8.5"
sickle_ui = "0.2.1"

[features]
default = [
  "dev"
]
dev = [
  "dep:bevy-inspector-egui",
  "bevy/dynamic_linking",
  "bevy/bevy_dev_tools",
  "bevy/file_watcher",
  "bevy/embedded_watcher",
]

# Performance optimizations borrowed from The Bevy Quick Start Guide
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3

